--- a/index.html
+++ b/index.html
@@ -4,10 +4,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+ <!-- Header -->
+<header class="bg-white shadow">
+<div class="container mx-auto px-6 py-4 flex justify-between items-center">
+<h1 class="text-2xl font-bold text-indigo-600">MyPortfolio</h1>
+<nav class="space-x-6">
+<a href="#" class="hover:text-indigo-600">Home</a>
+<a href="#about" class="hover:text-indigo-600">About</a>
+<a href="#projects" class="hover:text-indigo-600">Projects</a>
+<a href="#contact" class="hover:text-indigo-600">Contact</a>
+</nav>
+</div>
+</header>
+
+
+<!-- Hero Section -->
+<section class="bg-indigo-600 text-white">
+<div class="container mx-auto px-6 py-20 text-center">
+<h2 class="text-4xl font-bold mb-4">Hi, I'm Tisha 👋</h2>
+<p class="text-lg mb-6">Web Development Student | Frontend Developer</p>
+<a href="#projects" class="bg-white text-indigo-600 px-6 py-3 rounded-full font-semibold hover:bg-gray-200">View My Work</a>
+</div>
+</section>
+
+
+<!-- About Section -->
+<section id="about" class="py-16">
+<div class="container mx-auto px-6 text-center">
+<h3 class="text-3xl font-bold mb-6">About Me</h3>
+<p class="max-w-2xl mx-auto text-gray-600">I am a motivated student learning web development. I enjoy creating clean, responsive, and user-friendly websites using HTML, CSS, Tailwind CSS, and JavaScript.</p>
+</div>
+</section>
+
+
+<!-- Projects Section -->
+<section id="projects" class="bg-gray-100 py-16">
+<div class="container mx-auto px-6">
+<h3 class="text-3xl font-bold text-center mb-10">Projects</h3>
+<div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+<div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
+<h4 class="font-semibold text-xl mb-2">Portfolio Website</h4>
+<p class="text-gray-600">A personal portfolio website using Tailwind CSS.</p>
+</div>
+<div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
+<h4 class="font-semibold text-xl mb-2">Landing Page</h4>
+<p class="text-gray-600">Responsive landing page design for a startup.</p>
+</div>
+<div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
+<h4 class="font-semibold text-xl mb-2">Mini Website</h4>
+<p class="text-gray-600">Simple multi-page website using HTML & CSS.</p>
+</div>
+</div>
+</div>
+</section>
+
+
+<!-- Contact Section -->
+<section id="contact" class="py-16">
+<div class="container mx-auto px-6 text-center">
+<h3 class="text-3xl font-bold mb-6">Contact Me</h3>
+<p class="text-gray-600 mb-6">Feel free to connect with me for projects or learning.</p>
+<a href="mailto:example@email.com" class="bg-indigo-600 text-white px-6 py-3 rounded-full hover:bg-indigo-700">Email Me</a>
+</div>
+</section>
+
+
+<!-- Footer -->
+<footer class="bg-gray-800 text-white py-6">
+<div class="container mx-auto px-6 text-center">
+<p>© 2025 Tisha. All rights reserved.</p>
+</div>
+</footer>
 </body>
 </html>
